# llm_docs

./: .env.template  .gitignore  .ruff.toml  Dockerfile  README.md  docker-compose.yml  explore_db.py  llm-docs.conf  pyproject.toml  run.sh  test_single_package.py
scripts/: batch_discovery.py  batch_process.py  retry_stats.py  run_server.py
src/llm_docs/: cli.py  config.py
src/llm_docs/api/: app.py  dependencies.py
src/llm_docs/distillation/: __init__.py  distiller.py  prompt_templates.py
src/llm_docs/doc_extraction/: __init__.py  extractor.py
src/llm_docs/package_discovery/: __init__.py  discovery.py
src/llm_docs/storage/: database.py  models.py
src/llm_docs/utils/: llm_docs_logger.py
src/llm_docs/utils/browser/: __init__.py  vision_config.py  vision_integration.py
src/llm_docs/utils/token_tracking/: __init__.py  browser_use_integration.py  token_tracker_adapter.py  token_usage_tracker.py
static/: landing-page.html
tests/: conftest.py  test_api.py  test_distillation.py  test_doc_extraction.py  test_package_discovery.py
