[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm_docs"
version = "0.1.0"
description = "Condensed, optimized documentation for efficient consumption by LLMs"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Jeffrey Emanuel", email = "jeffrey.emanuel@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "docstring_parser",
    "httpx",
    "aiolimiter",
    "aiofiles",
    "aiosqlite",
    "psutil",
    "async-timeout",
    "termcolor",
    "markitdown",
    "anthropic",
    "openai",
    "google-genai",
    "aisuite[all]",
    "redis",
    "tiktoken",
    "python-decouple",
    "pydantic",
    "rich",
    "tqdm",
    "ruff",
    "mypy",
    "pytest",
    "beautifulsoup4",
    "lxml",
    "typer",
    "langchain_openai",
    "langchain-core",
    "browser-use @ git+https://github.com/gregpr07/browser-use.git",
    "playwright"
]

[tool.ruff]
target-version = "py311"
select = ["E", "F", "B", "I"]
ignore = ["E501"]

[tool.black]
line-length = 150
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_docs"]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
llm_docs = "llm_docs.cli:app"
